--- a/brainbyte-frontend/pages/games.html
+++ b/brainbyte-frontend/pages/games.html
@@ -105,18 +105,17 @@
   </div>
 
   <!-- Gamification bottom bar -->
-  <div id="gamifyBar" class="gamify-bar" aria-hidden="false">
-    <div id="gamifyToggle" style="display:flex;gap:10px;align-items:center;flex:1;cursor:pointer">
-      <div style="font-weight:700">XP: <span id="uiXp">0</span></div>
-      <div style="font-weight:700;margin-left:8px">Points: <span id="uiPoints">0</span></div>
-      <div style="font-weight:700;margin-left:8px">Brainbits: <span id="uiBrainbits">0</span></div>
-    </div>
-    <div style="display:flex;gap:8px">
-      <button id="openProfile" class="btn-primary">Profile</button>
-      <button id="openLeaderboard" class="btn-primary" style="background:#6b5cff">Leaderboard</button>
-    </div>
+<div id="gamifyBar" class="gamify-bar" aria-hidden="false">
+  <div id="gamifyToggle" style="display:flex;gap:10px;align-items:center;flex:1;cursor:pointer">
+    <div style="font-weight:700">XP: <span id="uiXp">0</span></div>
+    <div style="font-weight:700;margin-left:8px">Points: <span id="uiPoints">0</span></div>
+    <div style="font-weight:700;margin-left:8px">Brainbits: <span id="uiBrainbits">0</span></div>
   </div>
-
+<div style="display:flex;gap:8px">
+  <button id="openLeaderboard" class="btn-primary" style="background:#6b5cff">Leaderboard</button>
+</div>
+</div>
+ 
   <!-- Expanded gamify panel (profile / badges / leaderboard snippet) -->
   <div id="gamifyExpanded" class="gamify-expanded hidden" aria-hidden="true">
     <div class="profile-panel">
@@ -351,7 +350,6 @@ const gamifyToggle = document.getElementById('gamifyToggle');
 const gamifyBar = document.getElementById('gamifyBar');
 const gamifyExpanded = document.getElementById('gamifyExpanded');
 const closeGamify = document.getElementById('closeGamify');
-const openProfileBtn = document.getElementById('openProfile');
 const clearLocalBtn = document.getElementById('clearLocalBtn');
 
 const badgesListEl = document.getElementById('badgesList');
@@ -747,6 +745,37 @@ function showTemporaryPanelNotice(msg, d=2000){
 /* expose API */
 window.Gamify = { awardXP, awardPoints, awardBrainbits, recordWinLocal, recordPlayerCompletion, loadState: ()=> JSON.parse(JSON.stringify(gamifyState)) };
 
+</script>
+<!-- Background Music -->
+<audio id="bgMusic" loop>
+  <source src="assets/audio/bg-music.mp3" type="audio/mpeg">
+</audio>
+<script>
+  // Auto-play on first user interaction (required by browsers)
+  document.addEventListener('click', function initAudio() {
+    const bgMusic = document.getElementById('bgMusic');
+    if (bgMusic) {
+      // Unmute if previously muted
+      bgMusic.muted = false;
+      // Try to play
+      bgMusic.play().catch(e => console.log("Audio play blocked:", e));
+      // Remove listener after first play
+      document.removeEventListener('click', initAudio);
+    }
+  }, { once: true });
+</script>
+<button id="musicToggle" style="position:fixed; top:10px; right:10px; z-index:100; padding:6px 10px; background:rgba(0,0,0,0.3); color:white; border:1px solid white; border-radius:5px;">
+  🎵 Mute
+</button>
+
+<script>
+  document.getElementById('musicToggle').addEventListener('click', function() {
+    const bgMusic = document.getElementById('bgMusic');
+    if (bgMusic) {
+      bgMusic.muted = !bgMusic.muted;
+      this.textContent = bgMusic.muted ? '🔇 Unmute' : '🎵 Mute';
+    }
+  });
 </script>
 </body>
 </html>
